# ImIRC

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
client/src/: CMakeLists.txt  application.cpp  application.h  irc_connection.cpp  irc_connection.h  irc_state.cpp  irc_state.h  main.cpp
packaging/: CPackConfig.cmake  imirc.desktop  imirc.nsi
packaging/cmake/: mingw-vcpkg-toolchain.cmake
packaging/docker/: Dockerfile.linux
packaging/vcpkg-triplets/: x64-mingw-static.cmake
scripts/: package-linux-arm64.sh  package-windows.sh  package.sh
util/: CMakeLists.txt
util/src/: CMakeLists.txt  console.cpp  console.h  util.cpp  util.h
